# ffsim

./: CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml  searchindex.js
.doctrees/: environment.pickle
.doctrees/api/: ffsim.doctree
.doctrees/explanations/: hamiltonians.doctree  qiskit-gate-decompositions.doctree
.doctrees/how-to-guides/: entanglement-forging.doctree  fermion-operator.doctree  lucj.doctree  qiskit-circuits.doctree
.doctrees/tutorials/: 03-double-factorized.doctree  04-lucj.doctree  05-entanglement-forging.doctree  06-fermion-operator.doctree  double-factorized-trotter.doctree  double-factorized.doctree
.github/workflows/: test-latest-versions.yml  test-minimum-versions.yml
api/: ffsim.html
dev/: .buildinfo  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js
dev/.doctrees/: environment.pickle
dev/_modules/: index.html
dev/_static/: documentation_options.js
dev/api/: ffsim.contract.html  ffsim.html  ffsim.linalg.html  ffsim.optimize.html  ffsim.qiskit.html  ffsim.random.html  ffsim.testing.html  index.html
dev/explanations/: diag-coulomb-hamiltonian.html  diag-coulomb-hamiltonian.ipynb  double-factorized.html  double-factorized.ipynb  index.html  (+15 more)
explanations/: hamiltonians.html  hamiltonians.ipynb  orbital-rotation.ipynb  qiskit-gate-decompositions.html  qiskit-gate-decompositions.ipynb  state-vectors-and-gates.ipynb
how-to-guides/: entanglement-forging.html  entanglement-forging.ipynb  fermion-operator.html  fermion-operator.ipynb  index.html  lucj.html  lucj.ipynb  qiskit-circuits.html  qiskit-circuits.ipynb
src/: cistring.rs  jordan_wigner.rs  lib.rs  qubit_operator.rs
tutorials/: 01-introduction.ipynb  02-orbital-rotation.ipynb  03-double-factorized.html  03-double-factorized.ipynb  04-lucj.html  04-lucj.ipynb  05-entanglement-forging.html  05-entanglement-forging.ipynb  06-fermion-operator.html  06-fermion-operator.ipynb  double-factorized-trotter.html  double-factorized-trotter.ipynb  double-factorized.html  double-factorized.ipynb  orbital-rotation.ipynb
(+451 files in other folders)
