[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.poetry]
name = "ffsim"
version = "0.0.28.dev"
description = "Faster simulations of fermionic quantum circuits."
authors = ["The ffsim developers"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://qiskit-community.github.io/ffsim/"
repository = "https://github.com/qiskit-community/ffsim"
documentation = "https://qiskit-community.github.io/ffsim/"
classifiers = [
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
opt-einsum = "^3.3.0"
pyscf = ">=2.3.0"
qiskit = "^1.0.0"
scipy = "^1.13.0"
typing-extensions = "^4.11.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.4"
furo = "^2024.1.29"
maturin = "^1.5.1"
mypy = "^1.9.0"
myst-parser = "^2.0.0"
nbmake = "^1.5.3"
nbsphinx = "^0.9.3"
pre-commit = "^3.7.0"
pytest = "^8.1.1"
qiskit = { extras = ["visualization"], version = "^1.0.0" }
ruff = "0.3.4"
Sphinx = "^7.2.6"
sphinx-autodoc-typehints = "^2.0.0"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "ffsim._lib"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true
files = ["python/**/*.py", "python/**/*.pyi", "tests/**/*.py", "docs/**/*.py"]

[tool.ruff]
src = ["python"]
include = [
    "pyproject.toml",
    "python/**/*.py",
    "python/**/*.pyi",
    "tests/**/*.py",
    "tests/**/*.pyi",
    "docs/**/*.py",
    "docs/**/*.pyi",
    "docs/**/*.ipynb",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "NPY"]

[tool.cibuildwheel]
build = "cp38-macosx* cp38-manylinux_x86_64 cp38-manylinux_aarch64"
test-requires = "pytest"
test-command = "pytest {project}/tests"

[tool.cibuildwheel.linux]
before-all = "yum install -y openssl-devel rust cargo openblas-devel"
